# jqtui

./: LICENSE  README.md  pyproject.toml  tox.ini
jqtui/: example.json  jqtui.css  jqtui.py
